--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <!-- Hero Section -->
     <section class="text-center py-16 px-4 max-w-2xl mx-auto">
-        <h2 class="text-4xl font-bold mb-4">Hi, I'm Nathanial.</h2>
-        <p class="text-lg">A software engineer who loves tech, building efficient tools, and experimenting with kernels on old devices.</p>
+        <h2 class="text-4xl font-bold mb-4">Hi, I'm Nathanial</h2>
+        <p class="text-lg">I'm a passionate learner who's currently pursuing the difficult path of computer engineering</p>
     </section>
 
     <!-- Projects Section -->
@@ -32,9 +32,9 @@
         <div class="grid gap-6 md:grid-cols-2">
             <!-- Example Project Card -->
             <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded shadow hover:shadow-lg transition">
-                <h4 class="text-xl font-semibold mb-2">TDS Macro Automation</h4>
-                <p class="mb-2">Automating Tower Defense Simulator using Pulovrr's macro structures efficiently for map selection.</p>
-                <a href="https://github.com/YOURUSERNAME/YOURPROJECT" class="text-blue-600 dark:text-blue-400 hover:underline">View on GitHub →</a>
+                <h4 class="text-xl font-semibold mb-2">WIP</h4>
+                <p class="mb-2">WIP</p>
+                <a href="WIP" class="text-blue-600 dark:text-blue-400 hover:underline">View on GitHub →</a>
             </div>
             <!-- Add more project cards below as needed -->
         </div>
@@ -44,13 +44,13 @@
     <section class="text-center py-12 px-4 max-w-2xl mx-auto">
         <h3 class="text-2xl font-bold mb-4">Contact</h3>
         <p class="mb-2">You can reach me via:</p>
-        <p>Email: <a href="mailto:your@email.com" class="text-blue-600 dark:text-blue-400 hover:underline">your@email.com</a></p>
-        <p>GitHub: <a href="https://github.com/YOURUSERNAME" class="text-blue-600 dark:text-blue-400 hover:underline">YOURUSERNAME</a></p>
+        <p>Email: <a href="mailto:nathanialihart100@gmail.com" class="text-blue-600 dark:text-blue-400 hover:underline">your@email.com</a></p>
+        <p>GitHub: <a href="https://github.com/nathanialihart" class="text-blue-600 dark:text-blue-400 hover:underline">YOURUSERNAME</a></p>
     </section>
 
     <!-- Footer -->
     <footer class="text-center text-sm p-4 text-gray-500 dark:text-gray-400">
-        © 2025 Nathanial Hart. Built with Tailwind & Alpine.js.
+        Built with Tailwind & Alpine.js
     </footer>
 </body>
 </html>
