--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <section class="text-center py-12 px-4 max-w-2xl mx-auto">
         <h3 class="text-2xl font-bold mb-4">Contact</h3>
         <p class="mb-2">You can reach me via:</p>
-        <p>Email: <a href="mailto:nathanialihart100@gmail.com" class="text-blue-600 dark:text-blue-400 hover:underline">your@email.com</a></p>
-        <p>GitHub: <a href="https://github.com/nathanialihart" class="text-blue-600 dark:text-blue-400 hover:underline">YOURUSERNAME</a></p>
+        <p>Email: <a href="mailto:nathanialihart100@gmail.com" class="text-blue-600 dark:text-blue-400 hover:underline">nathanialihart100@gmail.com</a></p>
+        <p>GitHub: <a href="https://github.com/nathanialihart" class="text-blue-600 dark:text-blue-400 hover:underline">nathanialihart</a></p>
     </section>
 
     <!-- Footer -->
