--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Navbar -->
     <nav class="flex justify-between items-center p-4 max-w-4xl mx-auto">
-        <h1 class="text-xl font-bold">Nathanial Hart</h1>
+        <h1 class="text-xl font-bold">nathanialihart</h1>
         <button @click="darkMode = !darkMode" class="px-3 py-1 rounded bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 transition">
             Toggle Dark Mode
         </button>
