--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <!-- Navbar -->
     <nav class="flex justify-between items-center p-6 max-w-5xl mx-auto sticky top-0 bg-white/90 dark:bg-gray-900/90 backdrop-blur-md z-30 shadow-sm">
-        <h1 class="text-2xl font-extrabold text-transparent bg-gradient-to-r from-indigo-500 to-purple-600 bg-clip-text select-none">Nathanial Hart</h1>
+        <h1 class="text-2xl font-extrabold text-transparent bg-gradient-to-r from-indigo-500 to-purple-600 bg-clip-text select-none">nathanialihart</h1>
         <button @click="darkMode = !darkMode" class="px-4 py-2 rounded-lg bg-indigo-500 hover:bg-indigo-600 active:scale-95 text-white shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-indigo-400 transition">
             Toggle Dark Mode
         </button>
