--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" x-data="{ darkMode: false }" x-init="
-    darkMode = JSON.parse(localStorage.getItem('darkMode') ?? 'false');
+<html lang="en" x-data="{ darkMode: true }" x-init="
+    darkMode = JSON.parse(localStorage.getItem('darkMode') ?? 'true');
     $watch('darkMode', value => localStorage.setItem('darkMode', JSON.stringify(value)))
 " :class="{ 'dark': darkMode }" class="scroll-smooth">
 <head>
@@ -11,110 +11,157 @@
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
     <style>
+        /* Fonts & Backgrounds */
         body {
             font-family: 'Inter', sans-serif;
-            background-image: radial-gradient(circle at 30% 30%, #6366f1 15%, transparent 70%), radial-gradient(circle at 70% 70%, #8b5cf6 15%, transparent 70%);
+            background-image:
+                radial-gradient(circle at 30% 30%, #6366f1 20%, transparent 70%),
+                radial-gradient(circle at 70% 70%, #8b5cf6 20%, transparent 70%);
             background-attachment: fixed;
             background-repeat: no-repeat;
-            background-size: 600px 600px;
+            background-size: 650px 650px;
+            transition: background-color 0.6s ease;
         }
         .dark body {
-            background-image: radial-gradient(circle at 30% 30%, #4338ca 15%, transparent 70%), radial-gradient(circle at 70% 70%, #7c3aed 15%, transparent 70%);
+            background-image:
+                radial-gradient(circle at 30% 30%, #4338ca 20%, transparent 70%),
+                radial-gradient(circle at 70% 70%, #7c3aed 20%, transparent 70%);
         }
-        /* Fade-in animation */
+        .light body {
+            background-color: #f9fafb;
+            background-image:
+                radial-gradient(circle at 30% 30%, #d8b4fe 15%, transparent 80%),
+                radial-gradient(circle at 70% 70%, #a78bfa 15%, transparent 80%);
+        }
+
+        /* Fade-in animations */
         .fade-in {
-            animation: fadeIn 1.2s ease forwards;
+            animation: fadeIn 1.3s ease forwards;
             opacity: 0;
         }
-        .fade-in.delay-1 {
-            animation-delay: 0.3s;
-        }
-        .fade-in.delay-2 {
-            animation-delay: 0.6s;
-        }
-        .fade-in.delay-3 {
-            animation-delay: 0.9s;
-        }
+        .fade-in.delay-1 { animation-delay: 0.3s; }
+        .fade-in.delay-2 { animation-delay: 0.6s; }
+        .fade-in.delay-3 { animation-delay: 0.9s; }
         @keyframes fadeIn {
             to { opacity: 1; }
         }
-        /* Hover lift */
+
+        /* Hover lift and glow */
         .hover-lift:hover {
-            transform: translateY(-6px) scale(1.03);
-            box-shadow: 0 12px 24px rgba(99,102,241,0.4);
+            transform: translateY(-6px) scale(1.05);
+            box-shadow: 0 15px 35px rgba(131, 90, 252, 0.6);
         }
-        /* Smooth button transitions */
+        .hover-glow:hover {
+            filter: drop-shadow(0 0 10px #a78bfa);
+        }
+
+        /* Button transitions */
         button, a.button {
             transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
         }
+
         /* Scrollbar styling */
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 10px;
         }
         ::-webkit-scrollbar-track {
             background: transparent;
         }
         ::-webkit-scrollbar-thumb {
             background-color: #6366f1;
-            border-radius: 4px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        body.light ::-webkit-scrollbar-thumb {
+            background-color: #a78bfa;
+        }
+
+        /* Navbar */
+        nav {
+            backdrop-filter: saturate(180%) blur(12px);
+            -webkit-backdrop-filter: saturate(180%) blur(12px);
+        }
+
+        /* Gradient text styles */
+        .gradient-text {
+            background: linear-gradient(90deg, #6366f1, #8b5cf6, #a78bfa);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .gradient-text-light {
+            background: linear-gradient(90deg, #7c3aed, #8b5cf6, #c4b5fd);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
     </style>
 </head>
-<body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-500">
+<body :class="darkMode ? 'dark' : 'light'" class="bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-700">
 
     <!-- Navbar -->
-    <nav class="flex justify-between items-center p-6 max-w-5xl mx-auto sticky top-0 bg-white/90 dark:bg-gray-900/90 backdrop-blur-md z-30 shadow-sm">
-        <h1 class="text-2xl font-extrabold text-transparent bg-gradient-to-r from-indigo-500 to-purple-600 bg-clip-text select-none">nathanialihart</h1>
-        <button @click="darkMode = !darkMode" class="px-4 py-2 rounded-lg bg-indigo-500 hover:bg-indigo-600 active:scale-95 text-white shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-indigo-400 transition">
-            Toggle Dark Mode
+    <nav class="flex justify-between items-center p-6 max-w-5xl mx-auto sticky top-0 z-40 bg-white/70 dark:bg-gray-900/70 shadow-md rounded-b-lg">
+        <h1 class="text-3xl font-extrabold gradient-text select-none">nathanialihart</h1>
+        <button 
+            @click="darkMode = !darkMode" 
+            class="px-5 py-2 rounded-full font-semibold text-white shadow-lg
+                transition hover:scale-105 active:scale-95
+                bg-gradient-to-r from-purple-600 to-indigo-600
+                hover:from-pink-500 hover:to-indigo-700
+                focus:outline-none focus:ring-4 focus:ring-purple-500/50"
+            aria-label="Toggle light and dark mode"
+        >
+            <template x-if="darkMode">Light Mode</template>
+            <template x-if="!darkMode">Dark Mode</template>
         </button>
     </nav>
 
     <!-- Hero Section -->
-    <section class="text-center py-24 px-6 max-w-3xl mx-auto fade-in delay-1">
-        <h2 class="text-5xl md:text-6xl font-extrabold mb-4 bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-500 text-transparent bg-clip-text">
-            Hi, I'm Nathanial
-        </h2>
-        <p class="text-xl md:text-2xl max-w-xl mx-auto leading-relaxed text-gray-700 dark:text-gray-300">
+    <section class="text-center py-28 px-6 max-w-3xl mx-auto fade-in delay-1 select-none">
+        <h2 class="text-6xl md:text-7xl font-extrabold mb-5 gradient-text">Hi, I'm Nathanial</h2>
+        <p class="text-2xl md:text-3xl max-w-xl mx-auto leading-relaxed text-gray-300 dark:text-gray-200">
             I'm a passionate learner who's currently pursuing the difficult path of computer engineering
         </p>
     </section>
 
     <!-- Favorite Game Section -->
-    <section class="max-w-4xl mx-auto bg-gradient-to-r from-purple-600 to-indigo-600 rounded-xl p-10 my-16 text-white shadow-lg hover:shadow-xl transition hover:scale-[1.03] fade-in delay-2">
-        <h3 class="text-3xl font-bold mb-4 text-center">My Favorite Game</h3>
-        <p class="text-center mb-6 text-lg md:text-xl max-w-xl mx-auto">
-            I like <span class="font-semibold underline decoration-pink-400 decoration-2 underline-offset-4">TDS on roblox</span> — it’s a grindy ass tower defense game that I"ve been playing for 5 years
+    <section class="max-w-4xl mx-auto rounded-xl p-12 my-20
+        bg-gradient-to-r from-purple-700 via-indigo-700 to-pink-600 shadow-xl hover:shadow-2xl transition hover:scale-[1.04] fade-in delay-2 select-none">
+        <h3 class="text-4xl font-extrabold mb-6 text-center text-white drop-shadow-lg">
+            My Favorite Game
+        </h3>
+        <p class="text-center mb-8 text-lg md:text-xl max-w-xl mx-auto text-indigo-100">
+            I like <span class="font-semibold underline decoration-pink-400 decoration-4 underline-offset-6">TDS on roblox</span> — it’s a grindy ass tower defense game that I"ve been playing for 5 years
         </p>
         <div class="text-center">
             <a href="https://www.roblox.com/games/4662002670/Tower-Defense-Simulator" target="_blank" rel="noopener noreferrer" 
-               class="inline-block px-8 py-3 rounded-full bg-pink-400 hover:bg-pink-500 active:scale-95 shadow-md shadow-pink-400/50 text-white font-semibold transition">
+               class="inline-block px-10 py-4 rounded-full bg-pink-400 hover:bg-pink-500 active:scale-95 shadow-lg shadow-pink-400/60 text-white font-extrabold text-lg transition">
                 Play TDS on roblox →
             </a>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section class="text-center py-16 px-6 max-w-2xl mx-auto fade-in delay-3">
-        <h3 class="text-3xl font-bold mb-6">Contact Me</h3>
-        <p class="mb-3 text-lg">WIP</p>
-        <p class="mb-1">
+    <section class="text-center py-20 px-8 max-w-2xl mx-auto fade-in delay-3 select-none">
+        <h3 class="text-4xl font-extrabold mb-8 gradient-text-light">
+            Contact Me
+        </h3>
+        <p class="mb-5 text-xl text-gray-300 dark:text-gray-200">WIP</p>
+        <p class="mb-2 text-indigo-300 hover:text-indigo-400 transition">
             Email: 
-            <a href="mailto:nathanialihart100@gmail.com" class="text-indigo-400 hover:text-indigo-600 underline transition">
+            <a href="mailto:nathanialihart100@gmail.com" class="underline">
                 nathanialihart100@gmail.com
             </a>
         </p>
-        <p>
+        <p class="text-indigo-300 hover:text-indigo-400 transition">
             GitHub: 
-            <a href="https://github.com/nathanialihart" target="_blank" rel="noopener noreferrer" class="text-indigo-400 hover:text-indigo-600 underline transition">
+            <a href="https://github.com/nathanialihart" target="_blank" rel="noopener noreferrer" class="underline">
                 @nathanialihart
             </a>
         </p>
     </section>
 
     <!-- Footer -->
-    <footer class="text-center text-sm p-6 text-gray-500 dark:text-gray-400 select-none">
-        Built with <span class="font-semibold text-indigo-600 dark:text-indigo-400">Tailwind CSS</span> &amp; <span class="font-semibold text-purple-600 dark:text-purple-400">Alpine.js
+    <footer class="text-center text-sm p-8 text-gray-500 dark:text-gray-400 select-none">
+        Built with <span class="font-semibold text-indigo-400">Tailwind CSS</span> &amp; <span class="font-semibold text-purple-400">Alpine.js
     </footer>
 
 </body>
