--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" x-data="{ darkMode: true }" x-init="
     darkMode = JSON.parse(localStorage.getItem('darkMode') ?? 'true');
     $watch('darkMode', value => localStorage.setItem('darkMode', JSON.stringify(value)))
-" :class="{ 'dark': darkMode }" class="scroll-smooth">
+" :class="{ 'dark': darkMode, 'light': !darkMode }" class="scroll-smooth">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,56 +11,44 @@
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
     <style>
-        /* Fonts & Backgrounds */
         body {
             font-family: 'Inter', sans-serif;
-            background-image:
-                radial-gradient(circle at 30% 30%, #6366f1 20%, transparent 70%),
-                radial-gradient(circle at 70% 70%, #8b5cf6 20%, transparent 70%);
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            background-size: 650px 650px;
-            transition: background-color 0.6s ease;
+            background-color: white;
+            color: black;
+            transition: background-color 0.5s ease, color 0.5s ease;
         }
         .dark body {
-            background-image:
-                radial-gradient(circle at 30% 30%, #4338ca 20%, transparent 70%),
-                radial-gradient(circle at 70% 70%, #7c3aed 20%, transparent 70%);
+            background-color: #000;
+            color: white;
         }
         .light body {
-            background-color: #f9fafb;
-            background-image:
-                radial-gradient(circle at 30% 30%, #d8b4fe 15%, transparent 80%),
-                radial-gradient(circle at 70% 70%, #a78bfa 15%, transparent 80%);
+            background-color: white;
+            color: black;
         }
 
-        /* Fade-in animations */
-        .fade-in {
-            animation: fadeIn 1.3s ease forwards;
+        .fade-in-slide-up {
             opacity: 0;
+            transform: translateY(20px);
+            animation-fill-mode: forwards;
+            animation-name: fadeSlideUp;
+            animation-duration: 1s;
+            animation-timing-function: ease;
         }
-        .fade-in.delay-1 { animation-delay: 0.3s; }
-        .fade-in.delay-2 { animation-delay: 0.6s; }
-        .fade-in.delay-3 { animation-delay: 0.9s; }
-        @keyframes fadeIn {
-            to { opacity: 1; }
+        .fade-in-slide-up.delay-1 { animation-delay: 0.3s; }
+        .fade-in-slide-up.delay-2 { animation-delay: 0.6s; }
+        .fade-in-slide-up.delay-3 { animation-delay: 0.9s; }
+
+        @keyframes fadeSlideUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
-        /* Hover lift and glow */
-        .hover-lift:hover {
-            transform: translateY(-6px) scale(1.05);
-            box-shadow: 0 15px 35px rgba(131, 90, 252, 0.6);
-        }
-        .hover-glow:hover {
-            filter: drop-shadow(0 0 10px #a78bfa);
-        }
-
-        /* Button transitions */
-        button, a.button {
+        button {
             transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
         }
 
-        /* Scrollbar styling */
         ::-webkit-scrollbar {
             width: 10px;
         }
@@ -68,45 +56,42 @@
             background: transparent;
         }
         ::-webkit-scrollbar-thumb {
-            background-color: #6366f1;
+            background-color: #888;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
-        body.light ::-webkit-scrollbar-thumb {
-            background-color: #a78bfa;
+        .dark ::-webkit-scrollbar-thumb {
+            background-color: #bbb;
+        }
+        .light ::-webkit-scrollbar-thumb {
+            background-color: #888;
         }
 
-        /* Navbar */
         nav {
             backdrop-filter: saturate(180%) blur(12px);
             -webkit-backdrop-filter: saturate(180%) blur(12px);
+            background-color: rgba(255 255 255 / 0.7);
+            color: black;
+            transition: background-color 0.5s ease, color 0.5s ease;
         }
-
-        /* Gradient text styles */
-        .gradient-text {
-            background: linear-gradient(90deg, #6366f1, #8b5cf6, #a78bfa);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .gradient-text-light {
-            background: linear-gradient(90deg, #7c3aed, #8b5cf6, #c4b5fd);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+        .dark nav {
+            background-color: rgba(0 0 0 / 0.7);
+            color: white;
         }
     </style>
 </head>
-<body :class="darkMode ? 'dark' : 'light'" class="bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-700">
+<body>
 
     <!-- Navbar -->
-    <nav class="flex justify-between items-center p-6 max-w-5xl mx-auto sticky top-0 z-40 bg-white/70 dark:bg-gray-900/70 shadow-md rounded-b-lg">
-        <h1 class="text-3xl font-extrabold gradient-text select-none">nathanialihart</h1>
+    <nav class="flex justify-between items-center p-6 max-w-5xl mx-auto sticky top-0 z-40 shadow-md rounded-b-lg">
+        <h1 class="text-3xl font-extrabold select-none">nathanialihart</h1>
         <button 
             @click="darkMode = !darkMode" 
-            class="px-5 py-2 rounded-full font-semibold text-white shadow-lg
+            class="px-5 py-2 rounded-full font-semibold shadow-lg
                 transition hover:scale-105 active:scale-95
-                bg-gradient-to-r from-purple-600 to-indigo-600
-                hover:from-pink-500 hover:to-indigo-700
-                focus:outline-none focus:ring-4 focus:ring-purple-500/50"
+                bg-black dark:bg-white
+                text-white dark:text-black
+                focus:outline-none focus:ring-4 focus:ring-black/50 dark:focus:ring-white/50"
             aria-label="Toggle light and dark mode"
         >
             <template x-if="darkMode">Light Mode</template>
@@ -115,36 +100,40 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="text-center py-28 px-6 max-w-3xl mx-auto fade-in delay-1 select-none">
-        <h2 class="text-6xl md:text-7xl font-extrabold mb-5 gradient-text">Hi, I'm Nathanial</h2>
-        <p class="text-2xl md:text-3xl max-w-xl mx-auto leading-relaxed text-gray-300 dark:text-gray-200">
+    <section class="text-center py-28 px-6 max-w-3xl mx-auto fade-in-slide-up delay-1 select-none">
+        <h2 class="text-6xl md:text-7xl font-extrabold mb-5">
+            Hi, I'm Nathanial
+        </h2>
+        <p class="text-2xl md:text-3xl max-w-xl mx-auto leading-relaxed">
             I'm a passionate learner who's currently pursuing the difficult path of computer engineering
         </p>
     </section>
 
     <!-- Favorite Game Section -->
     <section class="max-w-4xl mx-auto rounded-xl p-12 my-20
-        bg-gradient-to-r from-purple-700 via-indigo-700 to-pink-600 shadow-xl hover:shadow-2xl transition hover:scale-[1.04] fade-in delay-2 select-none">
-        <h3 class="text-4xl font-extrabold mb-6 text-center text-white drop-shadow-lg">
+        bg-black dark:bg-white
+        text-white dark:text-black
+        shadow-xl hover:shadow-2xl transition hover:scale-[1.04] fade-in-slide-up delay-2 select-none">
+        <h3 class="text-4xl font-extrabold mb-6 text-center drop-shadow-lg">
             My Favorite Game
         </h3>
-        <p class="text-center mb-8 text-lg md:text-xl max-w-xl mx-auto text-indigo-100">
-            I like <span class="font-semibold underline decoration-pink-400 decoration-4 underline-offset-6">TDS on roblox</span> — it’s a grindy ass tower defense game that I"ve been playing for 5 years
+        <p class="text-center mb-8 text-lg md:text-xl max-w-xl mx-auto">
+            I like <span class="font-semibold underline decoration-black decoration-4 underline-offset-6 dark:decoration-white">TDS on roblox</span> — it’s a grindy ass tower defense game that I"ve been playing for 5 years
         </p>
         <div class="text-center">
             <a href="https://www.roblox.com/games/4662002670/Tower-Defense-Simulator" target="_blank" rel="noopener noreferrer" 
-               class="inline-block px-10 py-4 rounded-full bg-pink-400 hover:bg-pink-500 active:scale-95 shadow-lg shadow-pink-400/60 text-white font-extrabold text-lg transition">
+               class="inline-block px-10 py-4 rounded-full bg-white dark:bg-black text-black dark:text-white font-extrabold text-lg shadow-lg transition hover:bg-gray-200 dark:hover:bg-gray-800 active:scale-95">
                 Play TDS on roblox →
             </a>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section class="text-center py-20 px-8 max-w-2xl mx-auto fade-in delay-3 select-none">
-        <h3 class="text-4xl font-extrabold mb-8 gradient-text-light">
+    <section class="text-center py-20 px-8 max-w-2xl mx-auto fade-in-slide-up delay-3 select-none">
+        <h3 class="text-4xl font-extrabold mb-8">
             Contact Me
         </h3>
-        <p class="mb-5 text-xl text-gray-300 dark:text-gray-200">WIP</p>
+        <p class="mb-5 text-xl">WIP</p>
         <p class="mb-2 text-indigo-300 hover:text-indigo-400 transition">
             Email: 
             <a href="mailto:nathanialihart100@gmail.com" class="underline">
@@ -161,7 +150,7 @@
 
     <!-- Footer -->
     <footer class="text-center text-sm p-8 text-gray-500 dark:text-gray-400 select-none">
-        Built with <span class="font-semibold text-indigo-400">Tailwind CSS</span> &amp; <span class="font-semibold text-purple-400">Alpine.js
+        Built with <span class="font-semibold text-indigo-400">Tailwind CSS</span> &amp; <span class="font-semibold text-purple-400">Alpine.js</span>
     </footer>
 
 </body>
