--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </div>
 
         <p>
-            I also like <span>Clash Royale</span> — a competitive card game with real-time strategy and quick battles
+            I also like <span>Clash Royale</span> — a shitty card game with gay cards and p2w players that make me want to slice my dick off
         </p>
         <div class="text-center">
             <a href="https://clashroyale.com/" target="_blank" rel="noopener noreferrer" class="button">
